simplify make command and add instructions

--- a/README.org
+++ b/README.org
@@ -1,1 +1,19 @@
 * Seminar
+** Prerequisite
+- Install the latest version of [[http://pandoc.org/][Pandoc]]
+- Download (and extract) the latest version of [[https://github.com/hakimel/reveal.js/][reveal.js]] from https://github.com/hakimel/reveal.js/releases
+** Instruction
+1. Rename the directory =reveal.js-x.x.x= as =reveal.js= and put it under your working directory
+2. Convert from your markup file into reveal.js file like this:
+: pandoc --to revealjs -V theme=serif --katex -s -o index.html src.org
+- =-V theme=serif=: variable of theme (default ones can be found [[https://github.com/hakimel/reveal.js/#theming][here]])
+- =-katex=: math typeset library (you may try =--mathjax= or others)
+- =index.html=: any name but GitHub [[https://pages.github.com/][Pages]] will look for =index.html=
+- (Optional) =-i=: if you want incremental transitions
+- =src.org=: your markup file (you may want to use [[https://daringfireball.net/projects/markdown/][Markdown]] instead)
+** Examples
+- http://pandoc.org/demos.html
+- https://revealjs.com/
+- https://aekt.github.com/seminar/
+
+Thanks!
